# text_sight

./: .editorconfig  .gitignore  .pubignore  .swiftlint.yml  APPENDIX.md  CHANGELOG.md  CODESTYLE.md  LICENSE  README.md  analysis_options.yaml  context7.json  dart_dependency_validator.yaml  detekt.yml  pubspec.yaml
.ai/: AGENTS.md  CLAUDE.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: changelog.yml  example.yml  package.yml  pr-conventions.yml  publish.yml  repo.yml
android/: .gitignore  build.gradle.kts  consumer-rules.pro  detekt.yml  gradle.properties  settings.gradle.kts
android/.run/: Android tests.run.xml
benchmark/: .gitignore  README.md
benchmark/harness/: bench_capture.dart  capture_codec.dart  payloads.dart  result_writer.dart  scenario_args.dart
benchmark/micro/: codec_roundtrip.dart
benchmark/python/: .gitignore  pyproject.toml  run.py
benchmark/python/tests/: conftest.py  test_markdown.py  test_records.py  test_stats.py
benchmark/python/text_sight_bench/: __init__.py  charts.py  config.py  markdown.py  records.py  stats.py
benchmark/python/text_sight_bench/subcommands/: __init__.py  build.py  report.py  runner.py
benchmark/reports/: SUMMARY.md
example/: .gitignore  CHANGELOG.md  CODESTYLE.md  README.md  analysis_options.yaml  dart_dependency_validator.yaml  pubspec.yaml
example/.ai/: AGENTS.md
example/integration_test/: one_shot_test.dart
example/ios/: .gitignore  .swiftlint.yml
example/lib/: main.dart
ios/: .swiftlint.yml  text_sight.podspec
ios/text_sight/: Package.swift
lib/: text_sight.dart
pigeons/: text_sight.dart
scripts/: README.md  release.sh
test/: pigeon_text_sight_platform_test.dart
(+80 files in other folders)
