# Benchmark orchestrator / analyzer for text_sight, managed by `uv`.
#
#     cd benchmark/python
#     uv sync                              # create .venv, install everything
#     uv run python run.py build           # AOT-compile the micro-benchmark
#     uv run python run.py run             # execute + capture JSON
#     uv run python run.py report <json>   # render committed charts + SUMMARY.md
#     uv run ruff check . && uv run pytest # lint + test
#
# `uv.lock` is checked in for reproducible analysis — perf claims are only
# defensible if the stack is pinned.

[project]
name = "text-sight-benchmark"
version = "0.1.0"
description = "Benchmark orchestration + reporting for the text_sight captures-transport codec."
requires-python = ">=3.10"

# polars (Rust-backed) for analysis; seaborn/matplotlib for the committed
# README charts; pyarrow bridges polars -> pandas at the seaborn boundary.
# No scipy/jinja2 — there is no `compare` (Mann-Whitney) layer yet and the
# markdown is plain f-strings.
dependencies = [
    "polars>=1.0,<2.0",
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.13,<1.0",
    "pyarrow>=15.0,<22.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6,<1.0",
    "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"

[tool.ruff]
# Matches the Dart side's 100-column width (analysis_options.yaml formatter).
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
